--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ configurations {
 }
 
 version = "0.3.0"
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 dependencies {
     compile  "org.embulk:embulk-core:0.8.16"
