--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,13 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "com.github.kamatama41:gradle-embulk-plugin:0.1.4"
+        classpath "net.researchgate:gradle-release:2.5.0"
     }
 }
 
 apply plugin: "kotlin"
 apply plugin: "com.github.kamatama41.embulk"
+apply plugin: 'net.researchgate.release'
 
 repositories {
     mavenCentral()
@@ -20,7 +22,6 @@ repositories {
     maven { url 'http://kamatama41.github.com/maven-repository/repository' }
 }
 
-version = "0.3.2"
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
@@ -39,3 +40,8 @@ embulk {
     licenses = ["MIT"]
     homepage = "https://github.com/kamatama41/embulk-filter-hash"
 }
+
+release {
+    git { requireBranch = 'master' }
+}
+afterReleaseBuild.dependsOn gemPush
