--- a/circle.yml
+++ b/circle.yml
@@ -17,6 +17,7 @@ deployment:
   release:
     branch: release
     commands:
+      - curl -f -u $RUBYGEMS_USER:$RUBYGEMS_PASSWORD https://rubygems.org/api/v1/api_key.yaml > ~/.gem/credentials; chmod 0600 ~/.gem/credentials
       - git checkout master
       - git reset --hard origin/master
       - ./gradlew release -Prelease.useAutomaticVersion=true
