--- a/src/test/resources/yaml/input_basic.yml
+++ b/src/test/resources/yaml/input_basic.yml
@@ -1,8 +1,6 @@
-type: test
-data:
-- user1,20
-parser:
-  type: csv
-  columns:
-  - {name: username, type: string}
-  - {name: age, type: long}
+type: config
+columns:
+- {name: username, type: string}
+- {name: age, type: long}
+values:
+- - [user1,20]
