--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,11 @@ targetCompatibility = 1.8
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib"
     testCompile "com.github.kamatama41:embulk-test-helpers:0.6.0"
+    testRuntime "org.junit.jupiter:junit-jupiter-engine:5.3.2"
+}
+
+test {
+    useJUnitPlatform()
 }
 
 embulk {
